tests/errors/nativeptr_err/nativeptr_err.c
#error nativeptr_err.nativeptr_err:6:21 Expected a pointer type but was: unit
#error nativeptr_err.nativeptr_err:7:27 Expected a pointer type but was: unativeint
#error nativeptr_err.nativeptr_err:8:20 Expected a pointer type but was: obj
#error nativeptr_err.nativeptr_err:9:25 Expected a pointer type but was: int list
#error nativeptr_err.nativeptr_err:14:24 Expected two different pointer types but: one was unativeint, the other: voidptr
#error nativeptr_err.nativeptr_err:15:27 Expected two different pointer types but: one was nativeptr<int>, the other: unativeint
#error nativeptr_err.nativeptr_err:18:30 Expected two different pointer types but: one was nativeptr<'T>, the other: nativeptr<'T>
#error nativeptr_err.nativeptr_err:21:7 This linear variable is not used.
#error nativeptr_err.nativeptr_err:21:40 Expected two different pointer types but: one was voidptr, the other: __linear<nativeptr<'T>>
#error nativeptr_err.nativeptr_err:22:30 Expected two different pointer types but: one was __linear<voidptr>, the other: nativeptr<'T>
#error nativeptr_err.nativeptr_err:22:40 Expected a pointer type but was: __linear<voidptr>
#error nativeptr_err.nativeptr_err:26:15 This function misses some argument.
#error nativeptr_err.nativeptr_err:27:15 Expected nativeptr, __outptr or voidptr type.
#error nativeptr_err.nativeptr_err:30:15 Expected nativeptr, __outptr or voidptr type.
#error nativeptr_err.nativeptr_err:32:3 Type mismatch: '__voidinptr' <> 'uint8'.
#error nativeptr_err.nativeptr_err:33:3 Type mismatch: '__voidinptr' <> 'unit'.
#error nativeptr_err.nativeptr_err:37:15 This function misses some argument.
#error nativeptr_err.nativeptr_err:38:15 Expected __inptr, __voidinptr or __outptr type.
#error nativeptr_err.nativeptr_err:42:9 Expected __inptr, __voidinptr or __outptr type.
#error nativeptr_err.nativeptr_err:51:14 Type mismatch: 'nativeptr<int>' <> 'int'.
#error nativeptr_err.nativeptr_err:52:14 Type mismatch: '__inptr<int>' <> 'nativeptr<int>'.
#error nativeptr_err.nativeptr_err:53:14 Type mismatch: 'voidptr' <> 'nativeptr<int>'.
#error nativeptr_err.nativeptr_err:62:11 Expected a variable.
#error nativeptr_err.nativeptr_err:65:11 Expected a variable.
#error nativeptr_err.nativeptr_err:69:22 Expected pointer type.
#error nativeptr_err.nativeptr_err:71:24 Expected pointer type.
#error nativeptr_err.nativeptr_err:77:15 This function misses some argument.
#error nativeptr_err.nativeptr_err:78:20 Expected pointer type.
#error nativeptr_err.nativeptr_err:79:25 Expected nativeptr but was __outptr.
#error nativeptr_err.nativeptr_err:84:15 This function misses some argument.
#error nativeptr_err.nativeptr_err:85:15 This function misses some argument.
#error nativeptr_err.nativeptr_err:86:26 Expected nativeptr but was __inptr.
